--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.21.1",
     "firebase": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
